# ECE-8743-AdvancedRobotics

01/: EuclDist.m  Map1.txt  Map2.txt  Map3.txt  README.md  clean_edges.m  compute_vg.m  compute_vgr.m  compute_vgt.m  get_edges_tangents.m  get_egdes.m  get_obstacles.m  get_path.m  get_tangents.m  get_tangents_all.m  get_tangents_non.m  get_vertices.m  load_obstacles.m  main.m  plot_circle.m  plot_obstacles.m  plot_path.m  project_01.asv  project_01.m  project_01_vg.m  project_01_vg_reduced.asv  project_01_vg_reduced.m  project_01_vg_tangent.m  project_01b.m  reduced_visibility_graph.asv  reduced_visibility_graph.m  visable_graph.m  visibility_graph.m  visibility_graph_reduced.m  visibility_graph_tangent.m
Project-01/: README.md  clean_edges.m  compute_vg.m  compute_vgt.m  get_obstacles.m  get_tangents.m  get_tangents_all.m  get_tangents_non.m  main.m  plot_data.m  plot_edges.m  plot_obstacles.m
Project-02/: boundaryfollow2next.m  build_obstacles.m  build_obstacles_1.m  checkIntersect.m  checkalong.m  checkoff.m  compute_clearance.m  compute_curve.m  compute_move.m  compute_obstacles.m  compute_radar.m  compute_radar_2.m  compute_radar_3.m  compute_step.m  compute_step_2.m  compute_step_3.m  create_obstacles.m  createobstacles.m  decideOi.m  drawcircle.m  fix_radar.m  follow_boundary.m  getcurve.m  inputstartend.m  lineEquation.m  main.m  main_2.m  map_0.txt  map_1.txt  map_2.txt  map_3.txt  plot_data.m  plot_data_1.m  plot_data_2.m  plot_obstacles.m  plot_path.m  plot_radar_detection.m  plot_radar_range.m  plot_robot.m  plot_route.m  (+7 more)
Project-Final/: AlgorithPackageWrapping.h  CMakeLists.txt  README.md  TestAlgorithPackageWrapping.cpp  Types.h
Project-Final/Ci/: build.ps1  test.ps1
Project-Final/Headers/: DataTypes.h  DijkstraGpu.h  Interface.h  PolygonCpu.h  PolygonGpu.h  Printer.h  Types.h  Utils.h
Project-Final/Source/: CMakeLists.txt  DijkstraGpu.cu  Interface.cpp  PolygonCpu.cpp  PolygonGpu.cu  Printer.cpp  Utils.cu
Project-Final/Sources/: AlgorithPackageWrapping.cpp  CMakeLists.txt
Project-Final/Tests/: CMakeLists.txt  TestAlgorithPackageWrapping.cpp  TestsDijkstraGpu.cpp  TestsInterface.cpp  TestsPolygon.cpp  TestsPolygonCpu.cpp  TestsPolygonGpu.cpp  TestsPrinter.cpp
Project-Final/ci/Windows-11/: build.ps1  test.ps1
